@@ -12,7 +12,7 @@ Features
 - A flying Santa sleigh being pulled by biters. Made from ingame assets so fits in base game graphically.
 - Santa will take 60 tiles to land and take off using a horizontal (runway) approach. It will detroy any ground based things in this path.
 - Options for Santa to use Vertical Take Off or a horizontal runway take off to depart.
-- Configurable start, landing and disappearing position through the clouds.
+- Configurable start, landing and disappearing position through the clouds. Also updatable via commands.
 - Configurable santa status messages.
 - Santa is indestructible and cannot be interacted with in any way other than the commands.
 - Santa can optionally have a configurable inventory of presents and can then be clicked on to take the presents.
@@ -23,6 +23,8 @@ Commands
 - call-santa: Call santa to fly in and land
 - dismiss-santa: Send santa to take off and fly away
 - delete-santa: Removes santa from the map instantly
+- set-santa-landing-position: Set a new santa landing spot, overriding the mod setting. Takes arguments of x and y coordinates with a space between them, or blank to undo the mod set position and return to the mod setting. i.e. /set-santa-landing-position 14.5 -64
+- offset-santa-landing-position: Update santa's landing position by an offset to the current position (command or mod settings set). Takes arguments of x and y offset values with a space between them. i.e. /offset-santa-landing-position 10 0
 
 
 Example Ingame
