@@ -7,6 +7,8 @@ biter_santa_flying=Biter Santa
 call-santa=: Call santa to fly in and land
 dismiss-santa=: Send santa to take off and fly away
 delete-santa=: Removes santa from the map instantly
+biter_santa-set_santa_landing_position=: Set a new santa landing spot, overriding the mod setting. Takes arguments of x and y coordinates with a space between them, or blank to undo the mod set position and return to the mod setting.
+biter_santa-offset_santa_landing_position=: Update santa's landing position by an offset to the current position. Takes arguments of x and y offset values with a space between them.
 
 
 
@@ -35,3 +37,10 @@ santa-message-color=The color of messages sent to all playrrs about santa.
 santa-takeoff-method=How Santa takes off when dismissed using either a rolling horizontal run or with vertical thrusters.
 santa-has-inventory=If Santa has an inventory then he is also selectable and the inventory can be interacted with. Otherwise santa is not clickable or interactable.
 santa-inventory-contents=A JSON array of the contents of santa when landed in "name", "quantity" pairs. Must have the startup setting 'Santa has an inventory' enabled. i.e. [ {"name":"coal", "quantity":100}, {"name":"iron-plate", "quantity": 3} ]
+
+
+[message]
+biter_santa-set_santa_landing_position_wrong_arg_count=ERROR: set-santa-landing-position command takes either 2 arguments, x and y positions or no arguments. Provided __1__ arguments.
+biter_santa-set_santa_landing_position_arg_not_number=ERROR: set-santa-landing-position command passed a non numerical __1__ argument of '__2__'
+biter_santa-offset_santa_landing_position_wrong_arg_count=ERROR: offset-santa-landing-position command takes 2 arguments, x and y offset values. Provided __1__ arguments.
+biter_santa-offset_santa_landing_position_arg_not_number=ERROR: offset-santa-landing-position command passed a non numerical __1__ argument of '__2__'.
