@@ -2,7 +2,8 @@
 Version: 20.1.5
 Date: 2020-11-28
   Features:
-    - updated to Factorio 1.1 as-is
+    - updated to Factorio 1.1 as-is.
+    - add commands to set and offset santa's landing position.
   Changes:
   Bugfixes:
   Info:
@@ -10,7 +11,7 @@ Date: 2020-11-28
 Version: 18.1.4
 Date: 2020-01-26
   Features:
-    - updated to Factorio 0.18 as-is
+    - updated to Factorio 0.18 as-is.
   Changes:
   Bugfixes:
   Info:
